--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -33,8 +33,7 @@ neptune = "=1.1.1"
 neptune-triton = "=1.0.0"
 
 [dependencies.filecoin-proofs-api]
-package = "filecoin-proofs-api"
-version = "5.1.1"
+path = "../rust-filecoin-proofs-api"
 
 [build-dependencies]
 cbindgen = "= 0.14.0"
