--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -34,8 +34,7 @@ serde_json = "1.0.46"
 rust-gpu-tools = "0.2.0"
 
 [dependencies.filecoin-proofs-api]
-package = "filecoin-proofs-api"
-version = "5.4.1"
+path = "../rust-filecoin-proofs-api"
 default-features = false
 
 [build-dependencies]
